# ImageProcessing

./: CMakeLists.txt  Tasks  main.cu
logs/: log.txt
src/adpaters/: ImagePathAdapter.h
src/components/: GuigoImage.cpp  GuigoImage.h
src/editor/: Editor.cpp  Editor.h
src/log/: Log.cpp  Log.h
src/observers/: LogObserver.h
src/processingFaced/: ImageProcessing.cpp  ImageProcessing.h
src/renderer/: Renderer.cpp  Renderer.h
src/service/: ImageLoader.cpp  ImageLoader.h  ImagePathNFD.cpp  ImagePathNFD.h
src/widgets/: Console.cpp  Console.h  HelloWidget.cpp  HelloWidget.h  ImageModifier.h  ImageViwer.cpp  ImageViwer.h  LogWidget.cpp  LogWidget.h  TestWidget.cpp  TestWidget.h  Widget.cpp  Widget.h
src/widgets/console/: Console.h
src/widgets/imageManipulation/: ImageModifier.cpp  ImageModifier.h  ImageViewerCreator.cpp  ImageViewerCreator.h  ImageViwer.h
src/widgets/menuBar/: FileMenuBar.cpp  FileMenuBar.h  MenuBar.cpp  MenuBar.h
